# ty-ops

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: boolean.rs  eq.rs  functor.rs  lambda.rs  lib.rs  list.rs  maybe.rs  monad.rs  nat.rs  product.rs  ty.rs
src/classes/: eq.rs  functor.rs  mod.rs  monad.rs
tests/: list.rs
