[package]
name = "ty-ops"
version = "0.1.0"
edition = "2018"
authors = ["dark-flames <github@dark-flames.dev>"]
license = "MIT"
description = "Type level operation library in rust"
repository = "https://github.com/dark-flames/ty-ops"
include = [
    "/src/**",
    "/LICENSE",
    "/Cargo.toml",
    "/README.md",
]
readme = "README.md"

[dependencies]
